--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,27 @@
 
 body{
     margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    min-height: 100vh;
+}
+
+* {
+    box-sizing: border-box;
+    font-family: Lato,Courier,monospace;
+    margin: 0;
+    padding: 0;
+}
+
+section{
+    display: flex;
+    gap: 5vh;
+    max-width: 35vw;
+}
+
+.text{
+    max-width: 1000px;
+    flex-direction: column;
 }
